fix: html & css

--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@
             <div class="intro__inner">
                 <div class="intro__slider">
                     <img src="img/intro/intro-slider-1.png" alt="" class="intro__slider__img">
+                    <img src="img/intro/intro-slider-2.png" alt="" class="intro__slider__img">
+                    <img src="img/intro/intro-slider-3.png" alt="" class="intro__slider__img">
+                    <img src="img/intro/intro-slider-4.png" alt="" class="intro__slider__img">
+                    <img src="img/intro/intro-slider-5.png" alt="" class="intro__slider__img">
+                    <img src="img/intro/intro-slider-6.png" alt="" class="intro__slider__img">
+                    <img src="img/intro/intro-slider-7.png" alt="" class="intro__slider__img">
                 </div>
                 <h1 class="intro__title">BPM cloud.</h1>
                 <p class="intro__text">Интернет-маркетинг <br/> завтрашнего дня</p>
@@ -191,6 +197,8 @@
 
     </div> <!-- /animation-->
 
+    <!-- Feedback -->
+
     <div class="feedback">
         <div class="container">
             <div class="feedback__inner">
@@ -201,8 +209,8 @@
 
                 <div class="feedback__form">
                     <form action="" class="form">
-                        <input type="name" class="input input__name" placeholder="Имя">
-                        <input type="phone" class="input input__phone" placeholder="Телефон">
+                        <input type="name" class="input input__name" placeholder="Имя" required>
+                        <input type="phone" class="input input__phone"placeholder="Телефон" required>
                         <input type="submit" class="input__submit" value="Отправить заявку">
                     </form>
                 </div>
@@ -218,12 +226,12 @@
             <h2 class="directions__title">Направления</h2>
             <div class="directions__inner">
                 <div class="directions__link">
-                    <h4 class="directions__link__title directions__link__title__one">Разработка</h4>
-                    <h4 class="directions__link__title directions__link__title__two">Брендинг и дизайн</h4>
-                    <h4 class="directions__link__title directions__link__title__three">Контекст</h4>
-                    <h4 class="directions__link__title directions__link__title__four">Продвижение</h4>
-                    <h4 class="directions__link__title directions__link__title__five">SERM</h4>
-                    <h4 class="directions__link__title directions__link__title__six">Копирайтинг</h4>
+                    <h4 class="directions__link__title directions__link__title__active">Разработка</h4>
+                    <h4 class="directions__link__title ">Брендинг и дизайн</h4>
+                    <h4 class="directions__link__title ">Контекст</h4>
+                    <h4 class="directions__link__title ">Продвижение</h4>
+                    <h4 class="directions__link__title ">SERM</h4>
+                    <h4 class="directions__link__title ">Копирайтинг</h4>
                 </div>
                 <div class="directions__item">
                     <div class="directions__item__block directions__content__one">
@@ -321,11 +329,11 @@
                         <p class="business__date">2020</p>
                         <h3 class="business__title">Бизнес Квартал Россия</h3>
                         <div class="bussiness__content__block">
-                            <p class="business__text">Проектирование сайта</p>
-                            <p class="business__text">Копирайтинг</p>
-                            <p class="business__text">Веб-дизайн</p>
-                            <p class="business__text">Разработка сайта</p>
-                            <p class="business__text">SEO-оптимизация</p>
+                            <p class="business__text business__text__one">Проектирование сайта</p>
+                            <p class="business__text business__text__two">Копирайтинг</p>
+                            <p class="business__text business__text__three">Веб-дизайн</p>
+                            <p class="business__text business__text__four">Разработка сайта</p>
+                            <p class="business__text business__text__five">SEO-оптимизация</p>
                         </div>
                     </div>
                     <div class="business__img">
@@ -339,11 +347,11 @@
                         <p class="business__date">2020</p>
                         <h3 class="business__title">Бизнес Квартал Беларусь</h3>
                         <div class="bussiness__content__block">
-                            <p class="business__text">Проектирование сайта</p>
-                            <p class="business__text">Копирайтинг</p>
-                            <p class="business__text">Веб-дизайн</p>
-                            <p class="business__text">Разработка сайта</p>
-                            <p class="business__text">SEO-оптимизация</p>
+                            <p class="business__text business__text__one">Проектирование сайта</p>
+                            <p class="business__text business__text__two">Копирайтинг</p>
+                            <p class="business__text business__text__three">Веб-дизайн</p>
+                            <p class="business__text business__text__four">Разработка сайта</p>
+                            <p class="business__text business__text__five">SEO-оптимизация</p>
                         </div>
                     </div>
                     <div class="business__img">
@@ -354,16 +362,27 @@
         </div> <!-- /container -->
     </div> <!-- /business -->
 
-    <div class="gif__portfolio">
-        <p class="gif__text"> <span>
-        <svg class="span__two">
-            <use xlink:href="#x"></use>
-        </svg> </span> Смотрите наше <span class="span__one">портфолио</span>
-        <span>
+    <div class="gif__portfolio__inner">
+        <div class="gif__portfolio">
+            <p class="gif__text"> <span>
             <svg class="span__two">
                 <use xlink:href="#x"></use>
-            </svg> </span>
-        Смотрите наше <span class="span__one">портфолио</span></p>
+            </svg> </span> Смотрите наше <span class="span__one">портфолио</span>
+            <span>
+                <svg class="span__two">
+                    <use xlink:href="#x"></use>
+                </svg> </span>
+            Смотрите наше <span class="span__one">портфолио</span>
+            <span>
+                <svg class="span__two">
+                    <use xlink:href="#x"></use>
+                </svg> </span> Смотрите наше <span class="span__one">портфолио</span>
+                <span>
+                    <svg class="span__two">
+                        <use xlink:href="#x"></use>
+                    </svg> </span>
+                Смотрите наше <span class="span__one">портфолио</span></p>
+        </div>
     </div>
 
     <!-- about us -->
@@ -409,7 +428,7 @@
 
             <div class="contacts__form__info">
                 <div class="contacts__form__info__inner">
-                    <p class="contacts__gif contacts__gif__one">bpmcloudbpmcloudbpmcloud</p>
+                        <p class="contacts__gif contacts__gif__one">bpmcloudbpmcloudbpmcloudbpmclo</p>
                 <h2 class="contacts__form__title">Свяжитесь с нами</h2>
                 <form action="" class="contacts__form">
                     <div class="contacts__input__name__block">
@@ -422,7 +441,7 @@
                     </div>
                     <input type="submit" class="contacts__input__submit">
                 </form>
-                <p class="contacts__gif contacts__gif__two">bpmcloudbpmcloudbpmcloud</p>
+                <p class="contacts__gif contacts__gif__two">bpmcloudbpmcloudbpmcloudbpmclo</p>
                 </div>
             </div>
 
@@ -497,7 +516,10 @@
                 </div>
                 <div class="services__item__inner">
                     <div class="services__item__icon">
-                        <img src="img/services/services-1.png" alt="" class="services__item__img">
+                        <img src="img/services/services-1/services-1-1.png" alt="" class="services__item__img">
+                        <img src="img/services/services-1/services-1-2.png" alt="" class="services__item__img">
+                        <img src="img/services/services-1/services-1-3.png" alt="" class="services__item__img">
+                        <img src="img/services/services-1/services-1-4.png" alt="" class="services__item__img">
                     </div>
                     <div class="services__item__content__two">
                         <p class="services__item__text">Наши веб-дизайнеры, разработчики, верстальщики создают веб-ресурсы, способные вывести бизнес на новый уровень. У Вас будет собственный полноценный виртуальный продавец, работающий круглосуточно и без выходных.</p>
@@ -511,7 +533,10 @@
                 </div>
                 <div class="services__item__inner">
                     <div class="services__item__icon">
-                        <img src="img/services/services-2.png" alt="" class="services__item__img">
+                        <img src="img/services/services-2/services-2-1.png" alt="" class="services__item__img">
+                        <img src="img/services/services-2/services-2-2.png" alt="" class="services__item__img">
+                        <img src="img/services/services-2/services-2-3.png" alt="" class="services__item__img">
+                        <img src="img/services/services-2/services-2-4.png" alt="" class="services__item__img">
                     </div>
                     <div class="services__item__content__two">
                         <p class="services__item__text">Несмотря на длящиеся уже много лет рассуждения о том, что СЕО теряет актуальность и скоро чуть ли не весь трафик будет приходить на сайты из соцсетей, этот способ продвижения не собирается сдавать своих позиций и показывает отличные результаты. Заказывайте СЕО Вашего сайта, и digital-агентство «BPM CLOUD» сделает все возможное, чтобы ресурс попал в топ выдачи популярных поисковиков.</p>
@@ -525,7 +550,10 @@
                 </div>
                 <div class="services__item__inner">
                     <div class="services__item__icon">
-                        <img src="img/services/services-3.png" alt="" class="services__item__img">
+                        <img src="img/services/services-3/services-3-1.png" alt="" class="services__item__img">
+                        <img src="img/services/services-3/services-3-2.png" alt="" class="services__item__img">
+                        <img src="img/services/services-3/services-3-3.png" alt="" class="services__item__img">
+                        <img src="img/services/services-3/services-3-4.png" alt="" class="services__item__img">
                     </div>
                     <div class="services__item__content__two">
                         <p class="services__item__text">Наша студия веб дизайна разработает все необходимые бренду для полноценного продвижения визуальные материалы, от логотипа и фирменного стиля до иллюстраций и визиток.</p>
@@ -538,7 +566,10 @@
                 </div>
                 <div class="services__item__inner">
                     <div class="services__item__icon">
-                        <img src="img/services/services-4.png" alt="" class="services__item__img">
+                        <img src="img/services/services-4/services-4-1.png" alt="" class="services__item__img">
+                        <img src="img/services/services-4/services-4-2.png" alt="" class="services__item__img">
+                        <img src="img/services/services-4/services-4-3.png" alt="" class="services__item__img">
+                        <img src="img/services/services-4/services-4-4.png" alt="" class="services__item__img">
                     </div>
                     <div class="services__item__content__two">
                         <p class="services__item__text">Собственное приложение давно перестало быть прерогативой крупнейших фирм. Компании среднего и малого бизнеса также активно обзаводятся собственными приложениями, чтобы максимально приблизиться к своим клиентам.</p>
@@ -551,7 +582,10 @@
                 </div>
                 <div class="services__item__inner">
                     <div class="services__item__icon">
-                        <img src="img/services/services-5.png" alt="" class="services__item__img">
+                        <img src="img/services/services-5/services-5-1.png" alt="" class="services__item__img">
+                        <img src="img/services/services-5/services-5-2.png" alt="" class="services__item__img">
+                        <img src="img/services/services-5/services-5-3.png" alt="" class="services__item__img">
+                        <img src="img/services/services-5/services-5-4.png" alt="" class="services__item__img">
                     </div>
                     <div class="services__item__content__two">
                         <p class="services__item__text">В руках профессионала это самый быстрый и результативный способ привлечь новых покупателей на сайт. Если рекламный бюджет компании ограничен, то мы рекомендуем сначала использовать для продвижения контекстную рекламу, а затем подключать новые маркетинговые каналы.</p>
@@ -564,7 +598,10 @@
                 </div>
                 <div class="services__item__inner">
                     <div class="services__item__icon">
-                        <img src="img/services/services-6.png" alt="" class="services__item__img">
+                        <img src="img/services/services-6/services-6-1.png" alt="" class="services__item__img">
+                        <img src="img/services/services-6/services-6-2.png" alt="" class="services__item__img">
+                        <img src="img/services/services-6/services-6-3.png" alt="" class="services__item__img">
+                        <img src="img/services/services-6/services-6-4.png" alt="" class="services__item__img">
                     </div>
                     <div class="services__item__content__two">
                         <p class="services__item__text">Защитите себя от дискредитации со стороны недобросовестных конкурентов. Доверьте профессионалам заботу о репутации бизнеса в виртуальном пространстве.</p>
@@ -577,7 +614,10 @@
                 </div>
                 <div class="services__item__inner">
                     <div class="services__item__icon">
-                        <img src="img/services/services-7.png" alt="" class="services__item__img">
+                        <img src="img/services/services-7/services-7-1.png" alt="" class="services__item__img">
+                        <img src="img/services/services-7/services-7-2.png" alt="" class="services__item__img">
+                        <img src="img/services/services-7/services-7-3.png" alt="" class="services__item__img">
+                        <img src="img/services/services-7/services-7-4.png" alt="" class="services__item__img">
                     </div>
                     <div class="services__item__content__two">
                         <p class="services__item__text">Без сильных текстов добиться высоких результатов продвижения бизнеса в интернете сложно. И это относится к бизнесу, независимо от отрасли и рыночной ниши. В нашей команде достаточно опытных авторов, которые напишут для Вас эффективные продающие тексты и информационный контент.</p>
