--- a/index.html
+++ b/index.html
@@ -494,14 +494,14 @@
 
     <div class="gif__portfolio__inner">
         <div class="giv__photo__block">
-            <img src="img/gif/photo-1.png" alt="" class="gif__photo ">
-            <img src="img/gif/photo-2.png" alt="" class="gif__photo ">
-            <img src="img/gif/photo-3.png" alt="" class="gif__photo ">
-            <img src="img/gif/photo-4.png" alt="" class="gif__photo ">
-            <img src="img/gif/photo-5.png" alt="" class="gif__photo ">
-            <img src="img/gif/photo-6.png" alt="" class="gif__photo ">
-            <img src="img/gif/photo-7.png" alt="" class="gif__photo ">
-            <img src="img/gif/photo-8.png" alt="" class="gif__photo ">
+            <img src="img/gif/photo-1.png" alt="" class="gif__photo gif__photo__one">
+            <img src="img/gif/photo-2.png" alt="" class="gif__photo gif__photo__two">
+            <img src="img/gif/photo-3.png" alt="" class="gif__photo gif__photo__three">
+            <img src="img/gif/photo-4.png" alt="" class="gif__photo gif__photo__four">
+            <img src="img/gif/photo-5.png" alt="" class="gif__photo gif__photo__five">
+            <img src="img/gif/photo-6.png" alt="" class="gif__photo gif__photo__six">
+            <img src="img/gif/photo-7.png" alt="" class="gif__photo gif__photo__seven">
+            <img src="img/gif/photo-8.png" alt="" class="gif__photo gif__photo__eight">
         </div>
         <div class="gif__portfolio">
             <p class="gif__text"> <span>
