--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
                     <div class="directions__item__block ">
                         <div class="directions__content">
-                            <p class="directions__text ">Разработка удобных для посетителя, элегантных и доступных для поиска сайтов, их сопровождение — это то, что вы получите при работе с нами.</p>
+                            <p class="directions__text ">Какой-то текст</p>
                             <button class="btn__modal directions__btn">Заказать</button>
                         </div>
                         <div class="directions__icon">
@@ -435,7 +435,7 @@
 
                     <div class="directions__item__block ">
                         <div class="directions__content">
-                            <p class="directions__text ">Разработка удобных для посетителя, элегантных и доступных для поиска сайтов, их сопровождение — это то, что вы получите при работе с нами.</p>
+                            <p class="directions__text ">Тоже какой-то текст для примера </p>
                             <button class="btn__modal directions__btn">Заказать</button>
                         </div>
                         <div class="directions__icon">
@@ -547,7 +547,6 @@
     </div> <!-- /business -->
 
     <div class="gif__portfolio__inner">
-        <div class="giv__photo__block">
             <img src="img/index/gif/photo-1.png" alt="" class="gif__photo gif__photo__one">
             <img src="img/index/gif/photo-2.png" alt="" class="gif__photo gif__photo__two">
             <img src="img/index/gif/photo-3.png" alt="" class="gif__photo gif__photo__three">
@@ -556,18 +555,9 @@
             <img src="img/index/gif/photo-6.png" alt="" class="gif__photo gif__photo__six">
             <img src="img/index/gif/photo-7.png" alt="" class="gif__photo gif__photo__seven">
             <img src="img/index/gif/photo-8.png" alt="" class="gif__photo gif__photo__eight">
-        </div>
-        <div class="gif__portfolio">
-            <p class="gif__text"> <span>
-            <svg class="span__two">
-                <use xlink:href="#x"></use>
-            </svg> </span> Смотрите наше <span class="span__one">портфолио</span>
-            <span>
-                <svg class="span__two">
-                    <use xlink:href="#x"></use>
-                </svg> </span>
-            Смотрите наше <span class="span__one">портфолио</span>
-            <span>
+        <div class="gif__portfolio__wrapper">
+            <div class="gif__portfolio">
+                <p class="gif__text"> <span>
                 <svg class="span__two">
                     <use xlink:href="#x"></use>
                 </svg> </span> Смотрите наше <span class="span__one">портфолио</span>
@@ -575,7 +565,17 @@
                     <svg class="span__two">
                         <use xlink:href="#x"></use>
                     </svg> </span>
-                Смотрите наше <span class="span__one">портфолио</span></p>
+                Смотрите наше <span class="span__one">портфолио</span>
+                <span>
+                    <svg class="span__two">
+                        <use xlink:href="#x"></use>
+                    </svg> </span> Смотрите наше <span class="span__one">портфолио</span>
+                    <span>
+                        <svg class="span__two">
+                            <use xlink:href="#x"></use>
+                        </svg> </span>
+                    Смотрите наше <span class="span__one">портфолио</span></p>
+            </div>
         </div>
     </div>
 
@@ -1042,11 +1042,11 @@
 
                 <div class="advantages__block__form">
                     <form action="" class="advantages__form">
-                        <div>
+                        <div class="advantages__form__block__name">
                             <input type="name" class="advantages__name__phone advantages__name" placeholder="Имя">
                             <span class="error advantages__name__check">Пожалуйста, введите имя</span>
                         </div>
-                        <div>
+                        <div class="advantages__form__block__phone">
                             <label class='wrap__three'>
                                 <input type="phone" class="advantages__name__phone advantages__phone" placeholder="Телефон">
                                 <span class='tel__three'>+375</span>
