--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
                 <path d="M1 1L29.5 29.5" stroke="#131313" stroke-width="2"/>
                 <path d="M29.5 1L1 29.5" stroke="#131313" stroke-width="2"/>  
             </symbol>
+
+            <symbol id='service__principle__text__plus' viewBox="0 0 18 18">
+                <path d="M9 1V17" stroke="#FA5C45" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M1 9L17 9" stroke="#FA5C45" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </symbol>
         </svg>
     </g>
 
