--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <p class="menu__text__content">+7 999 000-00-00</p>
                             <p class="menu__text__content">+7 999 000-00-01</p>
                             <p class="menu__text__content">info@bpm-cloud.ru</p>
-                            <button class="menu__btn">Заказать проект</button>
+                            <button class="btn__modal menu__btn">Заказать проект</button>
                         </div>
                         <div class="menu__content__two">
                             <a href="" class="link__menu">О нас</a>
