Add: 3 str and fix

--- a/service.html
+++ b/service.html
@@ -464,6 +464,7 @@
                     <h4 class="h4 service__directions__text">Продвижение Instagram</h4>
                 </div>
                 <div class="service__directions__img">
+                    <img src="img/service/directions/directions-1.gif" alt="" class="service__directions__logo active__service__directions__logo">
                     <img src="img/service/directions/directions-1.gif" alt="" class="service__directions__logo">
                 </div>
             </div>
